# embetter

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  testtest.py
.github/workflows/: codechecks.yml  style.yml  unittest.yml
API/finetune/: index.html
API/finetune/contrastive/: index.html
API/finetune/feedforward/: index.html
API/grab/: index.html
API/model/: index.html
API/multi/clip/: index.html
API/multimodal/: index.html
API/text/: index.html
API/text/bytepair/: index.html
API/text/sense2vec/: index.html
API/text/sentence-enc/: index.html
API/text/spacy/: index.html
API/utils/: index.html
API/vision/: index.html
API/vision/colorhist/: index.html
applications/: index.html
datasets/: data-quality.jsonl  new-dataset.jsonl
docs/: applications.md  finetuners.md  finetuners.removed-md  index.md
docs/API/: external.md  finetune.md  grab.md  model.md  multimodal.md  text.md  utils.md  vision.md
docs/vegalite/: lite_embed1.json  lite_embed2.json
embetter/: __init__.py  base.py  error.py  grab.py  image.py  text.py  utils.py
embetter/finetune/: __init__.py  _constrastive_learn.py  _contrastive.py  _contrastive_tfm.py  _contrastive_tuner.py  _forward.py  _sbert_learn.py
embetter/model/: __init__.py  _constrastive.py  _diff.py  _sbert.py
embetter/multi/: __init__.py  _clip.py
embetter/tabular/: __init__.py  _forest.py
embetter/text/: __init__.py  _bpemb.py  _keras.py  _lite.py  _model2vec.py  _s2v.py  _sbert.py  _spacy.py  _unise.py  _word2vec.py
embetter/vision/: __init__.py  _colorhist.py  _grab.py  _loader.py  _torchvis.py
finetuners/: index.html
tests/: test_base.py  test_default.py  test_docs.py  test_finetuners.py  test_tabular.py  test_text.py  test_utils.py  test_vision.py
tests/data/: test_base.py
(+13 files in other folders)
